stage5/stage5task3ex1/y.output
Grammar

    0 $accept: Program $end

    1 Program: declarations START Slist END ';'

    2 declarations: DECL declList ENDDECL
    3             | DECL ENDDECL

    4 declList: declList declaration
    5         | declaration

    6 declaration: type varList ';'

    7 type: INT
    8     | STR

    9 varList: varList ',' ID '[' NUM ']'
   10        | varList ',' ID
   11        | ID '[' NUM ']'
   12        | ID

   13 Slist: Slist Stmt
   14      | Stmt

   15 Stmt: ID '=' Expr ';'
   16     | READ '(' ID ')' ';'
   17     | WRITE '(' Expr ')' ';'
   18     | IF '(' Expr ')' THEN Slist ELSE Slist ENDIF ';'
   19     | IF '(' Expr ')' THEN Slist ENDIF ';'
   20     | WHILE '(' Expr ')' DO Slist ENDWHILE ';'
   21     | BREAK ';'
   22     | CONTINUE ';'
   23     | REPEAT Slist UNTIL '(' Expr ')' ';'
   24     | DO Slist WHILE '(' Expr ')' ';'

   25 Expr: Expr '+' Expr
   26     | Expr '-' Expr
   27     | Expr '*' Expr
   28     | Expr '/' Expr
   29     | Expr '<' Expr
   30     | Expr '>' Expr
   31     | Expr LE Expr
   32     | Expr GE Expr
   33     | Expr EQ Expr
   34     | Expr NE Expr
   35     | '(' Expr ')'
   36     | NUM
   37     | ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 17 18 19 20 23 24 35
    ')' (41) 16 17 18 19 20 23 24 35
    '*' (42) 27
    '+' (43) 25
    ',' (44) 9 10
    '-' (45) 26
    '/' (47) 28
    ';' (59) 1 6 15 16 17 18 19 20 21 22 23 24
    '<' (60) 29
    '=' (61) 15
    '>' (62) 30
    '[' (91) 9 11
    ']' (93) 9 11
    error (256)
    NUM <node> (258) 9 11 36
    ID <node> (259) 9 10 11 12 15 16 37
    START (260) 1
    END (261) 1
    READ (262) 16
    WRITE (263) 17
    DECL (264) 2 3
    ENDDECL (265) 2 3
    INT (266) 7
    STR (267) 8
    IF (268) 18 19
    THEN (269) 18 19
    ELSE (270) 18
    ENDIF (271) 18 19
    WHILE (272) 20 24
    DO (273) 20 24
    ENDWHILE (274) 20
    BREAK (275) 21
    CONTINUE (276) 22
    LE (277) 31
    GE (278) 32
    EQ (279) 33
    NE (280) 34
    REPEAT (281) 23
    UNTIL (282) 23


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program <node> (42)
        on left: 1
        on right: 0
    declarations (43)
        on left: 2 3
        on right: 1
    declList (44)
        on left: 4 5
        on right: 2 4
    declaration (45)
        on left: 6
        on right: 4 5
    type <type> (46)
        on left: 7 8
        on right: 6
    varList (47)
        on left: 9 10 11 12
        on right: 6 9 10
    Slist <node> (48)
        on left: 13 14
        on right: 1 13 18 19 20 23 24
    Stmt <node> (49)
        on left: 15 16 17 18 19 20 21 22 23 24
        on right: 13 14
    Expr <node> (50)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 15 17 18 19 20 23 24 25 26 27 28 29 30 31 32 33 34 35


State 0

    0 $accept: • Program $end

    DECL  shift, and go to state 1

    Program       go to state 2
    declarations  go to state 3


State 1

    2 declarations: DECL • declList ENDDECL
    3             | DECL • ENDDECL

    ENDDECL  shift, and go to state 4
    INT      shift, and go to state 5
    STR      shift, and go to state 6

    declList     go to state 7
    declaration  go to state 8
    type         go to state 9


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 10


State 3

    1 Program: declarations • START Slist END ';'

    START  shift, and go to state 11


State 4

    3 declarations: DECL ENDDECL •

    $default  reduce using rule 3 (declarations)


State 5

    7 type: INT •

    $default  reduce using rule 7 (type)


State 6

    8 type: STR •

    $default  reduce using rule 8 (type)


State 7

    2 declarations: DECL declList • ENDDECL
    4 declList: declList • declaration

    ENDDECL  shift, and go to state 12
    INT      shift, and go to state 5
    STR      shift, and go to state 6

    declaration  go to state 13
    type         go to state 9


State 8

    5 declList: declaration •

    $default  reduce using rule 5 (declList)


State 9

    6 declaration: type • varList ';'

    ID  shift, and go to state 14

    varList  go to state 15


State 10

    0 $accept: Program $end •

    $default  accept


State 11

    1 Program: declarations START • Slist END ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Slist  go to state 25
    Stmt   go to state 26


State 12

    2 declarations: DECL declList ENDDECL •

    $default  reduce using rule 2 (declarations)


State 13

    4 declList: declList declaration •

    $default  reduce using rule 4 (declList)


State 14

   11 varList: ID • '[' NUM ']'
   12        | ID •

    '['  shift, and go to state 27

    $default  reduce using rule 12 (varList)


State 15

    6 declaration: type varList • ';'
    9 varList: varList • ',' ID '[' NUM ']'
   10        | varList • ',' ID

    ';'  shift, and go to state 28
    ','  shift, and go to state 29


State 16

   15 Stmt: ID • '=' Expr ';'

    '='  shift, and go to state 30


State 17

   16 Stmt: READ • '(' ID ')' ';'

    '('  shift, and go to state 31


State 18

   17 Stmt: WRITE • '(' Expr ')' ';'

    '('  shift, and go to state 32


State 19

   18 Stmt: IF • '(' Expr ')' THEN Slist ELSE Slist ENDIF ';'
   19     | IF • '(' Expr ')' THEN Slist ENDIF ';'

    '('  shift, and go to state 33


State 20

   20 Stmt: WHILE • '(' Expr ')' DO Slist ENDWHILE ';'

    '('  shift, and go to state 34


State 21

   24 Stmt: DO • Slist WHILE '(' Expr ')' ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Slist  go to state 35
    Stmt   go to state 26


State 22

   21 Stmt: BREAK • ';'

    ';'  shift, and go to state 36


State 23

   22 Stmt: CONTINUE • ';'

    ';'  shift, and go to state 37


State 24

   23 Stmt: REPEAT • Slist UNTIL '(' Expr ')' ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Slist  go to state 38
    Stmt   go to state 26


State 25

    1 Program: declarations START Slist • END ';'
   13 Slist: Slist • Stmt

    ID        shift, and go to state 16
    END       shift, and go to state 39
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Stmt  go to state 40


State 26

   14 Slist: Stmt •

    $default  reduce using rule 14 (Slist)


State 27

   11 varList: ID '[' • NUM ']'

    NUM  shift, and go to state 41


State 28

    6 declaration: type varList ';' •

    $default  reduce using rule 6 (declaration)


State 29

    9 varList: varList ',' • ID '[' NUM ']'
   10        | varList ',' • ID

    ID  shift, and go to state 42


State 30

   15 Stmt: ID '=' • Expr ';'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 46


State 31

   16 Stmt: READ '(' • ID ')' ';'

    ID  shift, and go to state 47


State 32

   17 Stmt: WRITE '(' • Expr ')' ';'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 48


State 33

   18 Stmt: IF '(' • Expr ')' THEN Slist ELSE Slist ENDIF ';'
   19     | IF '(' • Expr ')' THEN Slist ENDIF ';'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 49


State 34

   20 Stmt: WHILE '(' • Expr ')' DO Slist ENDWHILE ';'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 50


State 35

   13 Slist: Slist • Stmt
   24 Stmt: DO Slist • WHILE '(' Expr ')' ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 51
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Stmt  go to state 40


State 36

   21 Stmt: BREAK ';' •

    $default  reduce using rule 21 (Stmt)


State 37

   22 Stmt: CONTINUE ';' •

    $default  reduce using rule 22 (Stmt)


State 38

   13 Slist: Slist • Stmt
   23 Stmt: REPEAT Slist • UNTIL '(' Expr ')' ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24
    UNTIL     shift, and go to state 52

    Stmt  go to state 40


State 39

    1 Program: declarations START Slist END • ';'

    ';'  shift, and go to state 53


State 40

   13 Slist: Slist Stmt •

    $default  reduce using rule 13 (Slist)


State 41

   11 varList: ID '[' NUM • ']'

    ']'  shift, and go to state 54


State 42

    9 varList: varList ',' ID • '[' NUM ']'
   10        | varList ',' ID •

    '['  shift, and go to state 55

    $default  reduce using rule 10 (varList)


State 43

   36 Expr: NUM •

    $default  reduce using rule 36 (Expr)


State 44

   37 Expr: ID •

    $default  reduce using rule 37 (Expr)


State 45

   35 Expr: '(' • Expr ')'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 56


State 46

   15 Stmt: ID '=' Expr • ';'
   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ';'  shift, and go to state 67


State 47

   16 Stmt: READ '(' ID • ')' ';'

    ')'  shift, and go to state 68


State 48

   17 Stmt: WRITE '(' Expr • ')' ';'
   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 69


State 49

   18 Stmt: IF '(' Expr • ')' THEN Slist ELSE Slist ENDIF ';'
   19     | IF '(' Expr • ')' THEN Slist ENDIF ';'
   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 70


State 50

   20 Stmt: WHILE '(' Expr • ')' DO Slist ENDWHILE ';'
   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 71


State 51

   20 Stmt: WHILE • '(' Expr ')' DO Slist ENDWHILE ';'
   24     | DO Slist WHILE • '(' Expr ')' ';'

    '('  shift, and go to state 72


State 52

   23 Stmt: REPEAT Slist UNTIL • '(' Expr ')' ';'

    '('  shift, and go to state 73


State 53

    1 Program: declarations START Slist END ';' •

    $default  reduce using rule 1 (Program)


State 54

   11 varList: ID '[' NUM ']' •

    $default  reduce using rule 11 (varList)


State 55

    9 varList: varList ',' ID '[' • NUM ']'

    NUM  shift, and go to state 74


State 56

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr
   35     | '(' Expr • ')'

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 75


State 57

   31 Expr: Expr LE • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 76


State 58

   32 Expr: Expr GE • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 77


State 59

   33 Expr: Expr EQ • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 78


State 60

   34 Expr: Expr NE • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 79


State 61

   29 Expr: Expr '<' • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 80


State 62

   30 Expr: Expr '>' • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 81


State 63

   25 Expr: Expr '+' • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 82


State 64

   26 Expr: Expr '-' • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 83


State 65

   27 Expr: Expr '*' • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 84


State 66

   28 Expr: Expr '/' • Expr

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 85


State 67

   15 Stmt: ID '=' Expr ';' •

    $default  reduce using rule 15 (Stmt)


State 68

   16 Stmt: READ '(' ID ')' • ';'

    ';'  shift, and go to state 86


State 69

   17 Stmt: WRITE '(' Expr ')' • ';'

    ';'  shift, and go to state 87


State 70

   18 Stmt: IF '(' Expr ')' • THEN Slist ELSE Slist ENDIF ';'
   19     | IF '(' Expr ')' • THEN Slist ENDIF ';'

    THEN  shift, and go to state 88


State 71

   20 Stmt: WHILE '(' Expr ')' • DO Slist ENDWHILE ';'

    DO  shift, and go to state 89


State 72

   20 Stmt: WHILE '(' • Expr ')' DO Slist ENDWHILE ';'
   24     | DO Slist WHILE '(' • Expr ')' ';'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 90


State 73

   23 Stmt: REPEAT Slist UNTIL '(' • Expr ')' ';'

    NUM  shift, and go to state 43
    ID   shift, and go to state 44
    '('  shift, and go to state 45

    Expr  go to state 91


State 74

    9 varList: varList ',' ID '[' NUM • ']'

    ']'  shift, and go to state 92


State 75

   35 Expr: '(' Expr ')' •

    $default  reduce using rule 35 (Expr)


State 76

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   31     | Expr LE Expr •
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 31 (Expr)


State 77

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   32     | Expr GE Expr •
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 32 (Expr)


State 78

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   33     | Expr EQ Expr •
   34     | Expr • NE Expr

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 33 (Expr)


State 79

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr
   34     | Expr NE Expr •

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 34 (Expr)


State 80

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   29     | Expr '<' Expr •
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 29 (Expr)


State 81

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   30     | Expr '>' Expr •
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 30 (Expr)


State 82

   25 Expr: Expr • '+' Expr
   25     | Expr '+' Expr •
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 25 (Expr)


State 83

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   26     | Expr '-' Expr •
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    '*'  shift, and go to state 65
    '/'  shift, and go to state 66

    $default  reduce using rule 26 (Expr)


State 84

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   27     | Expr '*' Expr •
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    $default  reduce using rule 27 (Expr)


State 85

   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   28     | Expr '/' Expr •
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    $default  reduce using rule 28 (Expr)


State 86

   16 Stmt: READ '(' ID ')' ';' •

    $default  reduce using rule 16 (Stmt)


State 87

   17 Stmt: WRITE '(' Expr ')' ';' •

    $default  reduce using rule 17 (Stmt)


State 88

   18 Stmt: IF '(' Expr ')' THEN • Slist ELSE Slist ENDIF ';'
   19     | IF '(' Expr ')' THEN • Slist ENDIF ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Slist  go to state 93
    Stmt   go to state 26


State 89

   20 Stmt: WHILE '(' Expr ')' DO • Slist ENDWHILE ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Slist  go to state 94
    Stmt   go to state 26


State 90

   20 Stmt: WHILE '(' Expr • ')' DO Slist ENDWHILE ';'
   24     | DO Slist WHILE '(' Expr • ')' ';'
   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 95


State 91

   23 Stmt: REPEAT Slist UNTIL '(' Expr • ')' ';'
   25 Expr: Expr • '+' Expr
   26     | Expr • '-' Expr
   27     | Expr • '*' Expr
   28     | Expr • '/' Expr
   29     | Expr • '<' Expr
   30     | Expr • '>' Expr
   31     | Expr • LE Expr
   32     | Expr • GE Expr
   33     | Expr • EQ Expr
   34     | Expr • NE Expr

    LE   shift, and go to state 57
    GE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    '<'  shift, and go to state 61
    '>'  shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 96


State 92

    9 varList: varList ',' ID '[' NUM ']' •

    $default  reduce using rule 9 (varList)


State 93

   13 Slist: Slist • Stmt
   18 Stmt: IF '(' Expr ')' THEN Slist • ELSE Slist ENDIF ';'
   19     | IF '(' Expr ')' THEN Slist • ENDIF ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    ELSE      shift, and go to state 97
    ENDIF     shift, and go to state 98
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Stmt  go to state 40


State 94

   13 Slist: Slist • Stmt
   20 Stmt: WHILE '(' Expr ')' DO Slist • ENDWHILE ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    ENDWHILE  shift, and go to state 99
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Stmt  go to state 40


State 95

   20 Stmt: WHILE '(' Expr ')' • DO Slist ENDWHILE ';'
   24     | DO Slist WHILE '(' Expr ')' • ';'

    DO   shift, and go to state 89
    ';'  shift, and go to state 100


State 96

   23 Stmt: REPEAT Slist UNTIL '(' Expr ')' • ';'

    ';'  shift, and go to state 101


State 97

   18 Stmt: IF '(' Expr ')' THEN Slist ELSE • Slist ENDIF ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Slist  go to state 102
    Stmt   go to state 26


State 98

   19 Stmt: IF '(' Expr ')' THEN Slist ENDIF • ';'

    ';'  shift, and go to state 103


State 99

   20 Stmt: WHILE '(' Expr ')' DO Slist ENDWHILE • ';'

    ';'  shift, and go to state 104


State 100

   24 Stmt: DO Slist WHILE '(' Expr ')' ';' •

    $default  reduce using rule 24 (Stmt)


State 101

   23 Stmt: REPEAT Slist UNTIL '(' Expr ')' ';' •

    $default  reduce using rule 23 (Stmt)


State 102

   13 Slist: Slist • Stmt
   18 Stmt: IF '(' Expr ')' THEN Slist ELSE Slist • ENDIF ';'

    ID        shift, and go to state 16
    READ      shift, and go to state 17
    WRITE     shift, and go to state 18
    IF        shift, and go to state 19
    ENDIF     shift, and go to state 105
    WHILE     shift, and go to state 20
    DO        shift, and go to state 21
    BREAK     shift, and go to state 22
    CONTINUE  shift, and go to state 23
    REPEAT    shift, and go to state 24

    Stmt  go to state 40


State 103

   19 Stmt: IF '(' Expr ')' THEN Slist ENDIF ';' •

    $default  reduce using rule 19 (Stmt)


State 104

   20 Stmt: WHILE '(' Expr ')' DO Slist ENDWHILE ';' •

    $default  reduce using rule 20 (Stmt)


State 105

   18 Stmt: IF '(' Expr ')' THEN Slist ELSE Slist ENDIF • ';'

    ';'  shift, and go to state 106


State 106

   18 Stmt: IF '(' Expr ')' THEN Slist ELSE Slist ENDIF ';' •

    $default  reduce using rule 18 (Stmt)
